1.6

NOTE: 1.5 was never released to CPAN.

- Log/Dispatch.pm: Added convenience methods for log levels like
$dispatcher->alert($message).  Suggested by Dominique Dumont.

1.5

This version introduces some changes into the interface that will
cause incompatibility with any Log::Dispatch::Output interface you may
have created.  However, it is fairly simple to fix.  Simply change the
method in your subclass named 'log' to be called 'log_message'.  You
can also remove the line:

  return unless $self->_should_log($params{level});

This is now done before the message ever gets to the Output subclass
(which is what it should have done in the first place, really.)

This was done so that I could allow per-Output object callbacks, a
feature which several people have requested and which seems useful
enough to warrant the breakage.

NOTE: This change is transparent if you are only using the Output
objects included with this distribution.

- Many: Changed the interface to allow per-Output object level
callbacks and documented this.
- Log/Dispatch/Base.pm: new base class for both Log::Dispatch and
Log::Dispatch::Output objects (contains callback related code).  You
should never need to deal with this class unles you are me.
- Log/Dispatch/Output.pm: document _accepted_levels.
- Log/Dispatch/Output.pm: Fix _accepted_levels so that emergency level
is returned as 'emergency', not 'emerg'.
- Log/Dispatch.pm: Fix doc bug (change 'file' to 'filename').  Thanks
to Clayton Scott.
- Log/Dispatch/File.pm: Do compile time check for O_APPEND constant
rather than run time check.

1.2

- Log/Dispatch.pm: Added callbacks parameter to Log::Dispatch->new.  I
will also be adding this to the Log::Dispatch::* classes via
Log::Dispatch::Output but I wanted to get this new version out there
because I think there are people out there who would benefit from
this.
- Log/Dispatch.pm: Added docs section on why Log::Dispatch doesn't add
newlines to outgoing messages.

1.11
